[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/start_screen/start_screen.gd" type="Script" id=1]
[ext_resource path="res://themes/special_titie.tres" type="Theme" id=2]
[ext_resource path="res://assets/music/Hell_or_High_Water_Master_Titleloop_Export_1.mp3" type="AudioStream" id=3]
[ext_resource path="res://themes/big_body.tres" type="Theme" id=5]
[ext_resource path="res://themes/default_body.tres" type="Theme" id=6]
[ext_resource path="res://assets/ui/Menu_background.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/StartMenu/TitleCard/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/StartMenu/TitleCard/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "title_card_idle"
length = 4.0
loop = true

[sub_resource type="Animation" id=2]
resource_name = "title_card_start"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/StartMenu/TitleCard/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/StartMenu/TitleCard/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartScreen" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/title_card_idle = SubResource( 3 )
anims/title_card_start = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="StartMenu" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128

[node name="TitleCard" type="Control" parent="CanvasLayer/StartMenu"]
unique_name_in_owner = true
margin_left = 128.0
margin_top = 128.0
margin_right = 1792.0
margin_bottom = 952.0

[node name="Title" type="Label" parent="CanvasLayer/StartMenu/TitleCard"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1008.0
margin_bottom = 476.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Mt.
Recollection"

[node name="Label" type="Label" parent="CanvasLayer/StartMenu/TitleCard"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 6 )
text = "Press any button"
align = 1
valign = 1

[node name="MainMenu" type="Control" parent="CanvasLayer/StartMenu"]
unique_name_in_owner = true
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = 1792.0
margin_bottom = 952.0

[node name="Title" type="Label" parent="CanvasLayer/StartMenu/MainMenu"]
margin_right = 802.0
margin_bottom = 203.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Mt.
Recollection"

[node name="MainMenuOptions" type="VBoxContainer" parent="CanvasLayer/StartMenu/MainMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 0
theme = ExtResource( 5 )

[node name="Start" type="Button" parent="CanvasLayer/StartMenu/MainMenu/MainMenuOptions"]
margin_right = 336.0
margin_bottom = 58.0
size_flags_vertical = 0
text = "Play"
align = 0

[node name="Credits" type="Button" parent="CanvasLayer/StartMenu/MainMenu/MainMenuOptions"]
margin_top = 62.0
margin_right = 336.0
margin_bottom = 120.0
size_flags_vertical = 0
text = "Credits"
align = 0

[node name="CreditsMenu" type="Control" parent="CanvasLayer/StartMenu"]
unique_name_in_owner = true
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = 1792.0
margin_bottom = 952.0
theme = ExtResource( 5 )

[node name="Credits" type="VBoxContainer" parent="CanvasLayer/StartMenu/CreditsMenu"]
anchor_right = 0.504
anchor_bottom = 1.0
margin_right = 0.119995
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 6 )
custom_constants/separation = 64
alignment = 1

[node name="Designers" type="VBoxContainer" parent="CanvasLayer/StartMenu/CreditsMenu/Credits"]
margin_top = 61.0
margin_right = 838.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Designers"]
margin_right = 838.0
margin_bottom = 119.0
focus_neighbour_top = NodePath(".")
focus_previous = NodePath(".")
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Game Design, SFX & Writing"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Designers"]
margin_top = 123.0
margin_right = 838.0
margin_bottom = 155.0
text = "SirSunstone"
align = 1

[node name="Artists" type="VBoxContainer" parent="CanvasLayer/StartMenu/CreditsMenu/Credits"]
margin_top = 280.0
margin_right = 838.0
margin_bottom = 410.0

[node name="Label" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Artists"]
margin_right = 838.0
margin_bottom = 58.0
focus_neighbour_top = NodePath(".")
focus_previous = NodePath(".")
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Art"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Artists"]
margin_top = 62.0
margin_right = 838.0
margin_bottom = 94.0
text = "icylily"
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Artists"]
margin_top = 98.0
margin_right = 838.0
margin_bottom = 130.0
text = "Suricato Guerrilheiro"
align = 1

[node name="Music" type="VBoxContainer" parent="CanvasLayer/StartMenu/CreditsMenu/Credits"]
margin_top = 474.0
margin_right = 838.0
margin_bottom = 568.0

[node name="Label" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Music"]
margin_right = 838.0
margin_bottom = 58.0
focus_neighbour_top = NodePath(".")
focus_previous = NodePath(".")
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Music"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Music"]
margin_top = 62.0
margin_right = 838.0
margin_bottom = 94.0
text = "Inkwell_Music"
align = 1

[node name="Programmers" type="VBoxContainer" parent="CanvasLayer/StartMenu/CreditsMenu/Credits"]
margin_top = 632.0
margin_right = 838.0
margin_bottom = 762.0

[node name="Label" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Programmers"]
margin_right = 838.0
margin_bottom = 58.0
focus_neighbour_top = NodePath(".")
focus_previous = NodePath(".")
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Programming"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Programmers"]
margin_top = 62.0
margin_right = 838.0
margin_bottom = 94.0
text = "Zircon332"
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/StartMenu/CreditsMenu/Credits/Programmers"]
margin_top = 98.0
margin_right = 838.0
margin_bottom = 130.0
text = "ZeeHatcher"
align = 1

[node name="Back" type="Button" parent="CanvasLayer/StartMenu/CreditsMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
text = "Back"
align = 0

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
color = Color( 0, 0, 0, 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="CanvasLayer/StartMenu/MainMenu/MainMenuOptions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenu/MainMenu/MainMenuOptions/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenu/CreditsMenu/Back" to="." method="_on_Back_pressed"]
